CB-1952 reverse proxy auth fixes